# shield-mobile-core

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  Dockerfile  Dockerfile.toolchain  LICENSE  NOTICE  README.md  action.yml  go.mod  go.sum  shield-platform.md
.github/workflows/: ci.yml  correctness.yml  docker.yml  fuzz-nightly.yml  ios.yml  native.yml
cmd/shield/: main.go
cmd/shield-iosstrip/: main.go
cmd/shield-nativeapk/: main.go
deploy/mobsf/: README.md  docker-compose.yml
docs/: committee-review-v0.1.0.md
docs/adr/: 0001-typed-ir.md  0002-nats-queue.md  0003-otlp-tracing.md  0004-llvm-native-svc.md
docs/spec/: 00-assumptions.md  01-overview.md  02-functional-requirements.md  03-nfr.md  04-architecture.md  05-data-model.md  06-api.md  07-database.md  08-frontend.md  09-backend.md  10-infrastructure.md  11-devops.md  12-security.md  13-ai.md  14-observability.md  15-testing.md  16-roadmap.md  17-backlog.md  18-risks.md  19-costs.md  20-improvements.md  99-checklists.md  README.md
engine/: assemble_test.go  benchmark_test.go  controlflow.go  controlflow_test.go  engine.go  engine_test.go  flatten.go  flatten_test.go  fuzz_test.go  junk.go  members_test.go  reorder.go  risk_report.go  strings.go  strings_register_test.go  vm.go  vm_smali.go  vm_test.go
examples/: policy-prod-high.json  shield.yml
internal/analyze/: analyze.go  (+1 more)
native-svc/: CMakeLists.txt  README.md
native-svc/src/: Flatten.cpp  Flatten.h  MBA.cpp  MBA.h  Opaque.cpp  Opaque.h  Rasp.cpp  Rasp.h  Strings.cpp  Strings.h  Tamper.cpp  Tamper.h  main.cpp
native-svc/test/: apk-flow-gate.sh  arm64-exec-gate.sh  gate.sh  lib-driver.c  libsample.c  ndk-gate.sh  ondevice-gate.sh  rasp-gate.sh  sample.c  tamper-gate.sh  tracer.c
native-svc/tools/: protect-so.sh  tamper-patch.py
obs/: metrics.go
policy/: policy.go
scripts/: golden-diff.sh  ios-simulator-gate.sh  ios-strip-gate.sh  redteam.sh  validate-aes.sh  validate-roundtrip.sh  validate-vm.sh
(+82 files in other folders)
